[tool.poetry]
name = "cryptopals-challenges"
version = "0.1.0"
description = ""
authors = ["BR4GER <benjamin.wuermli@students.fhnw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
